<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:padding="0dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/create_an_account"
                android:textColor="@color/color_purple"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/splash_background" />

            <EditText
                android:id="@+id/signUp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_design"
                android:drawableStart="@drawable/person"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="14dp" />

            <EditText
                android:id="@+id/signUp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:padding="14dp" />

            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="15dp"
                android:ems="10"

                android:hint="Password"
                android:inputType="textPassword"
                android:padding="14dp" />

            <EditText
                android:id="@+id/signUp_refer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_text_design"
                android:drawableLeft="@drawable/refer"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="Refer Code"
                android:inputType="textPersonName"
                android:padding="14dp" />

            <Button
                android:id="@+id/signUp_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/submit_btn_bg"
                android:text="@string/submit"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/have_ac_btn_bg"
                android:onClick="goToLoginPage"
                android:text="@string/already_account"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>